@@ -1,3 +1,8 @@
+2004-02-20 Braden McDaniel  <braden@endoframe.com>
+
+	* src/libopenvrml/openvrml/field.h:  Changed event_listener and
+	event_emitter to inherit boost::noncopyable.
+
 2004-02-19 Braden McDaniel  <braden@endoframe.com>
 
 	* src/libopenvrml/openvrml/field.h:  Replaced a variable
